<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.z.zstore.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.z.zstore.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/cart_fragment" />
    <fragment
        android:id="@+id/nav_orders"
        android:name="com.z.zstore.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/orders_fragment" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.z.zstore.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/categories_fragment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.z.zstore.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings_fragment" />


    <fragment
        android:id="@+id/nav_share"
        android:name="com.z.zstore.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.z.zstore.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>